# notas-musicais2

./: mkdocs.yml  pyproject.toml
docs/: index.md
docs/stylesheets/: extra.css
notas_musicais2/: acordes.py  cli.py  escalas.py
tests/: test_acordes.py  test_cli.py  test_escalas.py
